Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9507

o2iblnd assert on reconnect

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.10.0
    • None
    • None
    • 3
    • 9223372036854775807

      An assert in kiblnd_reconnect_peer() is being hit. With the multi-qp patch, it is possible to have ibp_connecting to be > 0. Since one connection can fail, and an attempt to reconnect can occur, while the other connections are still being established.

      Discussed with Doug and this assert should be changed to an if statement, to log when this situation occurs instead of asserting.

            doug Doug Oucharek (Inactive)
            ashehata Amir Shehata (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: